Fix clickable on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,6 +143,7 @@ tr.clickable {
   display: table-row;
   align-items: center;
   transform: rotate(0);
+  position: relative;
   overflow: visible; // for tooltips
 
   & td {
